# resource-health

./: .gitignore  README.md  mkdocs.yml
api-utils/: README.md  pyproject.toml
api-utils/src/api_utils/: api_utils.py  exceptions.py
argocd/: resource-health.yaml
check_api/: README.md  cli_mock.py  lib.py  main.py  openapi.json  print_response_stream.py  pyproject.toml
check_manager/: Dockerfile  README.md  cli_mock.py  openapi.json  pyproject.toml
check_manager/authentication/: config.json  dummy_auth.py
check_manager/example_hooks/basic_http_hooks/: hooks.py
check_manager/example_hooks/oidc_auth/: auth_hooks.py  disallow_frequent_check_hooks.py
check_manager/example_k8s_templates/: collection_check_template.py  ping_template.py  script_template.py  telemetry_access_template.py
check_manager/hooks/: hooks.py
check_manager/src/: api_interface.py  check_api.py  check_cli.py  exceptions.py  json_api_types.py  k8s_backend.py  lib.py  security.py
check_manager/src/api_utils/: api_utils.py  exceptions.py  json_api_types.py
check_manager/src/check_api/: __init__.py  hook_utils.py
check_manager/src/check_backends/: __init__.py  check_backend.py  k8s_backend.py  mock_backend.py  rest_backend.py
check_manager/src/check_backends/k8s_backend/: README.md  __init__.py  class_modifier.py  templates.py
check_manager/src/check_backends/k8s_backend/template_examples/: __init__.py  ping_template.py  script_template.py
check_manager/src/check_backends/k8s_backend/template_utils/: __init__.py  utils.py
check_manager/src/check_cli/: __main__.py  check.py  check_config.py
check_manager/src/check_hooks/: __init__.py  hook_utils.py
check_manager/templates/: k8s_templates.py  ping_template.py  script_template.py  test_template.py
check_manager/tests/: test_hook_import.py  test_k8s_backend.py
check_manager_website/: Dockerfile  README.md  package.json  tailwind.config.ts
check_manager_website/src/app/: check_api_wrapper.ts  layout.tsx  page.tsx  server.ts
check_manager_website/src/components/: ButtonWithCheckmark.tsx  CheckError.tsx  CustomLink.tsx  LoadingDiv.tsx  LoadingText.tsx  TelemetryDurationDropdown.tsx
check_manager_website/src/layouts/: DefaultLayout.tsx
check_manager_website/src/lib/: backend-wrapper.ts  config.ts  helpers.ts
deployment/: README.md  kustomization.yaml
deployment/apps/: opentelemetry-collector.yaml  resource-health.yaml
deployment/secrets/: sensmetry-user-sealedsecret.yaml
docs/: index.md  service-offer.md
docs/design/: 0-core-functions.md  1-data-persistence.md  2-management-interface.md  3-automated-scheduling.md  overview.md  use-cases.md
docs/getting-started/: deployment-overview.md  quick-start.md
docs/usage/: tutorials.md
doorstop_reqs_uc/reqs/br/: .doorstop.yml  BR125.yml  BR126.yml  BR127.yml  BR128.yml  BR129.yml  BR130.yml  BR131.yml
doorstop_reqs_uc/reqs/dr/: .doorstop.yml  REQ001.yml  REQ002.yml  REQ003.yml  REQ004.yml  REQ005.yml  REQ006.yml  REQ007.yml  REQ008.yml  REQ009.yml  REQ010.yml  REQ011.yml  REQ012.yml  REQ013.yml  REQ014.yml  REQ015.yml  REQ016.yml  REQ017.yml  REQ018.yml  REQ019.yml  REQ020.yml  REQ021.yml  REQ022_1.yml  REQ022_2.yml  REQ022_3.yml  REQ022_4.yml  REQ022_5.yml  REQ022_6.yml  REQ023.yml
doorstop_reqs_uc/tasks/: .doorstop.yml  T001.yml  T002.yml  T003.yml  T004.yml
doorstop_reqs_uc/usecases/duc/: .doorstop.yml  DUC001.yml  DUC002.yml  DUC003.yml  DUC004.yml  DUC005.yml  DUC006.yml  DUC007.yml  DUC008.yml  DUC009.yml  DUC010.yml  DUC011.yml  DUC012.yml  DUC013.yml  DUC014.yml  DUC015.yml  DUC016.yml
doorstop_reqs_uc/usecases/uc/: .doorstop.yml  UC68.yml  UC68_1.yml  (+3 more)
eoepca-api-utils/: README.md  pyproject.toml
eoepca-api-utils/src/eoepca_api_utils/: api_utils.py  exceptions.py  json_api_types.py
helm/: Chart.yaml  README.md  eoepca-develop-values.yaml  values.yaml
helm/templates/: _helpers.tpl  api-deployment.yaml  api-hooks-configmap.yaml  api-service.yaml  check-manager-role.yaml  check-manager-rolebinding.yaml  check-manager-serviceaccount.yaml  cronjob-manager-role.yaml  default-cronjob-manager.yaml  health-check-templates-configmap.yaml  healthchecks-certificate.yaml  healthchecks-cronjobs.yaml  ingress.yaml  mockapi-certificate.yaml  mockapi-deployment.yaml  mockapi-service.yaml  opensearch-admin-certificate.yaml  serviceaccount.yaml  telemetry-api-deployment.yaml  telemetry-api-hooks-configmap.yaml  telemetry-api-service.yaml  testrun-certificate.yaml  testrun-cronjob.yaml  web-client-certificate.yaml  web-deployment.yaml  web-service.yaml
helm_todo/: cfmanifest  opensearch-dashboards-tls-certificate.yaml
mock/service/: Dockerfile  README.md  app.py  requirements.txt
plugin-utils/: README.md  dummy.py  pyproject.toml
plugin-utils/src/plugin_utils/: loader.py  runner.py
plugin-utils/tests/: test_loader.py  test_runner.py
pytest-health/: README.md
pytest-health/instrumentation/: README.md  conftest.py  requirements.txt
pytest-health/runner-image/: Dockerfile  README.md  base_requirements.txt  run_script.py  run_script.sh  tests.py  ucat.py
pytest-health/utilities/: REAMDE.md  pyproject.toml
pytest-health/utilities/src/: upcat.py
resource-health-reference-deployment/: .helmignore  Chart.yaml  README.md  eoepca-develop-values.yaml  values.yaml
resource-health-reference-deployment/templates/: _helpers.tpl  health-check-templates-configmap.yaml  opensearch-admin-certificate.yaml  opensearch-dashboards-client-certificate.yaml  opensearch-dashboards-tls-certificate.yaml  opensearch-tls-certificate.yaml  otel-collector-certificate.yaml  otel-collector-client-certificate.yaml
sandbox/: README.md  resource-health-test-certificate.yaml  resource-health-test-client-certificate.yaml  resource-health-test-client-pod.yaml  resource-health-test-server-certificate.yaml  resource-health-test-server-pod.yaml  resource-health-test-service.yaml
skeletons/: Makefile
skeletons/api-service-fastapi/: generate-openapi.py  main.py  run-plain.sh
tmp/: tmp
web/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
(+26 files in other folders)
