[project]
name = "check-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "jsonschema>=4.23.0",
    "pydantic>=2.9.2",
]

[tool.uv]
dev-dependencies = [
    "types-jsonschema>=4.23.0.20240813",
]
