[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "check-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "httpx>=0.27.2",
    "jsonschema>=4.23.0",
    "pydantic>=2.9.2",
    "kubernetes_asyncio>=31.1.0",
    "typer>=0.13.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=6.0",
    "pytest-asyncio>=0.17",
    "pytest-cov>=6.0.0",
    "types-jsonschema>=4.23.0.20240813",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"

[project.scripts]
check = "check_cli.check:app"
check-api-server-dev = "check_api:uvicorn_dev"
check-api-server-dummy-prod = "check_api:unicorn_dummy_prod"
check-api-server-k8s = "check_api:uvicorn_k8s"
