[project]
name = "plugin-utils"
version = "2.0.0"
description = "A hopefully growing collection of utilities to make it easier to load and use plugins for your Python application or framework."
readme = "README.md"
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mypy>=1.15.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
addopts = "-ra -q --import-mode=importlib --cov=plugin_utils --cov-report=term-missing"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
show_error_context = true
pretty = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
