[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "utilities"
version = "2.0.0"
readme = "README.md"
dependencies = [
	"fsspec[http]>=2025.9.0",
	"universal-pathlib>=0.3.4",
]
requires-python = ">=3.12"

[project.scripts]
upcat = "upcat:main"
